<resources>
    <string name="app_name">Calcolatrice</string>
    <string name="op1">primo operando</string>
    <string name="op2">secondo operando</string>
    <string name="piu">+</string>
    <string name="meno">-</string>
    <string name="per">*</string>
    <string name="diviso">/</string>
    <string name="risultato">Il risultato è: %4.3f</string>
    <string name="help">Inserire due numeri e premere un pulsante</string>
    <string name="divbyzero">Impossibile dividere per zero</string>
</resources>
